--- a/style.css
+++ b/style.css
@@ -8,7 +8,9 @@
     box-sizing: border-box;
     font-family: 'League Spartan', sans-serif;
 }
-
+li{
+    list-style: none;
+}
 h1{
     font-size: 50px;
     line-height: 64px;
@@ -178,4 +180,429 @@ body{
 }
 
 
-/*-----------------------------HEADER STYLE-----------------------------------*/
+/*-----------------------------FEATURE SECTION STYLE-----------------------------------*/
+
+#feature{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+#feature .fe-box{
+    width: 180px;
+    text-align: center;
+    border: 1px solid rgba(160, 159, 159, 0.1);
+    box-shadow: 0 5px 8px rgba(0,0,0,0.2);
+    padding: 20px 0;
+    border-radius: 4px;
+}
+
+#feature .fe-box:hover{
+    box-shadow: 0 12px 15px rgba(0,0,0,0.2);
+}
+
+#feature .fe-box h6{
+    display: inline-block;
+    padding:9px 8px 4px 8px;
+    background-color: #3295D4;
+    border-radius: 4px;
+    color: #fff;
+    box-shadow: 0 12px 25px rgba(0,0,0,0.09);
+    margin-top: 5px;
+}
+
+#feature .fe-box:nth-child(2) h6{
+    background-color: #CB7CA7;
+    color: #fff;
+}
+
+#feature .fe-box:nth-child(3) h6{
+    background-color: #B8DD7F;
+    color: #fff;
+}
+
+#feature .fe-box:nth-child(4) h6{
+    background-color: #89BFE1;
+    color: #fff;
+}
+
+#feature .fe-box:nth-child(5) h6{
+    background-color: #A28FD8;
+    color: #fff;
+}
+
+#feature .fe-box:nth-child(6) h6{
+    background-color: #EFB191;
+    color: #fff;
+}
+
+/*-----------------------------PRODUCT SECTION STYLE-----------------------------------*/
+
+#product1,
+#product2{
+    text-align: center;
+}
+
+#product1 .pro-container,
+#product2 .pro-container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+}
+#product1 .pro,
+#product2 .pro{
+    width: 23%;
+    min-width: 250px;
+    padding: 15px 15px;
+    border: 1px solid rgba(160, 159, 159, 0.1);
+    box-shadow: 0 5px 8px rgba(0,0,0,0.2);
+    border-radius: 16px;
+    margin-bottom: 30px;
+    cursor: pointer;
+    transition: 0.3s ease;
+}
+#product1 .pro:hover,
+#product2 .pro:hover{
+    box-shadow: 0 12px 14px rgba(0,0,0,0.2);
+    transition: 0.3s ease;
+}
+#product1 .pro img,
+#product2 .pro img{
+    width: 100%;
+    margin-bottom: 15px;
+    border-radius: 12px;
+}
+
+#product1 .pro .description,
+#product2 .pro .description{
+    text-align: start;
+}
+
+#product1 .pro .description span,
+#product2 .pro .description span{
+    position: relative;
+    color: #606063;
+    font-size: 12px;
+}
+
+#product1 .pro .star,
+#product2 .pro .star{
+    margin-bottom: 15px;
+}
+.fa-star{
+    margin-top: 5px;
+    color:#F4DC54;
+}
+.buy{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.buy a{
+    text-decoration: none;
+    color: #121212;
+}
+
+.description h4{
+    position: relative;
+}
+.description span{  
+    position: absolute;
+    vertical-align:super;
+    font-size: 12px;
+    top:1px;
+}
+.fa-cart-plus{
+    background-color: #e3e6f3;
+    border-radius: 50%;
+    padding: 7px;
+    transition: 0.3s ease;
+}
+
+.fa-cart-plus:hover{
+    background-color: #a4b3f1;
+    color: #fff;
+    filter:drop-shadow(0 2px 3px rgba(0,0,0,0.2));
+    transition: 0.3s ease;
+}
+
+/*-----------------------------BANNER SECTION STYLE-----------------------------------*/
+
+#banner {
+    background-image: url('assets/img/banner/b2.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    width: 100%;
+    height: 40vh;
+}
+
+#banner .banner{
+    padding-top: 40px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+#banner .banner h1,
+    #banner .banner p{
+    color:#fff;
+    text-align: center;
+}
+
+#banner .banner span {
+    color: crimson
+}
+#banner .banner button {
+    background-color: #e3e6f3;
+    padding: 16px 18px 12px;
+    border-radius: 8px;
+    font-size: 16px;
+    font-weight: 700;
+    border:none;
+    transform: scale(1);
+    margin: 20px auto;
+    outline: none;
+    cursor: pointer;
+}   
+
+#banner .banner button:hover{
+    background-color: #a4b3f1;
+    box-shadow: 0 12px 14px rgba(0,0,0,0.4);
+    transform: scale(1.1);
+    transition: 0.3s ease;
+}
+
+/*-----------------------------SM BANNER SECTION STYLE-----------------------------------*/
+
+#sm-banner{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+    
+}
+
+#sm-banner h4, #sm-banner h2,
+#sm-banner span{
+    color: #fff;
+}
+#sm-banner .banner-box{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    background-image: url('assets/img/banner/b17.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    width: 48%;
+    height: 50vh;
+    padding:0 25px;
+    border-radius: 2px;
+    box-shadow: 0 12px 14px rgba(0,0,0,0.4);
+    margin:10px;
+}
+
+#sm-banner .banner-box button{
+    background-color: transparent;
+    border: 2px solid #fff;
+    padding: 16px 18px 12px;
+    border-radius: 8px;
+    font-size: 16px;
+    font-weight: 700;
+    color: #fff;
+    transform: scale(1);
+    margin: 20px 0;
+    outline: none;
+    cursor: pointer;
+}
+
+#sm-banner .banner-box button:hover{
+   
+    box-shadow: 0 4px 7px rgba(0,0,0,0.4);
+    transform: scale(1.1);
+    transition: 0.3s ease;
+}
+
+#sm-banner .banner-box:nth-child(2) {
+    background-image: url('assets/img/banner/b10.jpg');
+}
+
+#sm-banner .banner-box:nth-child(3){
+    width: 29%;
+    height: 30vh;
+    background-image: url('assets/img/banner/b7.jpg');
+}
+
+#sm-banner .banner-box:nth-child(5){
+    width: 29%;
+    height: 30vh;
+    background-image: url('assets/img/banner/b16.jpg');
+}
+#sm-banner .banner-box:nth-child(4){
+    width:35%;
+    height: 30vh;
+    background-image: url('assets/img/banner/b4.jpg');
+}
+
+#sm-banner .banner-box:nth-child(3) span,
+#sm-banner .banner-box:nth-child(4) span,
+#sm-banner .banner-box:nth-child(5) span{
+    color: crimson;
+    font-weight: 800;
+    margin-top:10px;
+}
+
+#sm-banner .banner-box:nth-child(3) h3,
+#sm-banner .banner-box:nth-child(4) h3,
+#sm-banner .banner-box:nth-child(5) h3{
+    color: #fff;
+    font-weight: 900;
+    font-size: x-large;
+}
+
+/*-----------------------------NEWSLETTER BANNER SECTION STYLE-----------------------------------*/
+
+#newsletter{
+    background-image: url('assets/img/banner/b14.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    width: 100%;
+    height: 30vh;
+    background-color: #072047;
+}
+
+#newsletter .newsletter-container{
+    display: flex;;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    padding:0 80px;
+}
+
+#newsletter .newsletter-container h3{
+    color: #fff;
+    font-size: xx-large;
+    font-weight: 800;
+}
+
+#newsletter .newsletter-container p{
+    color: #3295D4;
+}
+
+#newsletter .newsletter-container span{
+    color:#F4DC54;
+    font-weight: 800;
+}
+#newsletter .newsletter-container .form{
+    width: 35%;
+    display: flex;
+}
+#newsletter .newsletter-container #newsletter_mail{
+    padding: 12px 8px 8px;
+    width:75%;
+    font-size: 16px;
+    border-radius: 4px 0 0 4px; 
+    border: none;
+    outline: none;
+}
+
+#newsletter .newsletter-container button{
+    padding: 12px 8px 8px;
+    background-color: #a4b3f1;
+    color: #fff;
+    border-radius: 0px 4px 4px 0;
+    font-size: 16px;
+    border: none;
+    outline: none;
+    transition: 0.3s ease;   
+}
+
+#newsletter .newsletter-container button:hover{
+    background-color: #6c86ee;
+    transition: 0.3s ease;
+}
+
+/*------------------------------------FOOTER SECTION STYLE------------------------------------------*/
+
+#footer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height:50vh;
+    padding:50px 0;
+}
+
+#footer .footer-container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    
+}
+
+.contact img{
+    width: 80px;
+    height: 40px;
+    margin-bottom: 15px;
+}
+
+.contact .social_footer{
+    list-style: none;
+    display: flex;
+    margin-top:15px;
+
+}
+
+.footer-container .contact h4{
+    font-weight: 800;
+    margin: 15px 0 15px 0;
+}
+.contact .social_footer li a{
+    text-decoration: none;
+    color: #121212;
+    margin-right: 10px;
+}
+
+.contact .social_footer li a .fa-instagram:hover{
+    background: linear-gradient(45deg, #405de6, #5851db, #833ab4, #c13584, #e1306c, #fd1d1d);
+    border-radius: 25%;
+    color:#fff;
+}
+
+.contact .social_footer li a .fa-github:hover{
+    color: #84e4f5;
+    background-color: #121212;
+    border-radius: 50%;
+}
+
+.contact .social_footer li a .fa-facebook:hover{
+    color:#4867AA;
+}
+
+.contact .social_footer li a .fa-linkedin:hover{
+    color:#0A66C2;
+}
+
+.contact .social_footer li a .fa-youtube:hover{
+    color:#FF0000;
+}
+
+.links a{
+    text-decoration: none;
+    color: #121212;
+}
+
+.links h4{
+    font-weight: 800;
+    margin: 15px 0 15px 0;
+}
