--- a/style.css
+++ b/style.css
@@ -522,6 +522,7 @@ body{
     font-size: 16px;
     border: none;
     outline: none;
+    cursor: pointer;
     transition: 0.3s ease;   
 }
 
@@ -539,15 +540,18 @@ body{
     align-items: center;
     width: 100%;
     height:50vh;
-    padding:50px 0;
+    padding:80px 0;
+    background-image: url(assets/img/banner/b14.png);
+    background-color: #f1f1f1;
 }
 
-#footer .footer-container{
+.footer_container{
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: first baseline;
     width: 100%;
-    
+    margin-top: 80px;
 }
 
 .contact img{
@@ -563,13 +567,13 @@ body{
 
 }
 
-.footer-container .contact h4{
+.footer_container .contact h4{
     font-weight: 800;
     margin: 15px 0 15px 0;
 }
 .contact .social_footer li a{
     text-decoration: none;
-    color: #121212;
+    color: #465b52;
     margin-right: 10px;
 }
 
@@ -599,10 +603,35 @@ body{
 
 .links a{
     text-decoration: none;
-    color: #121212;
+    color: #465b52;
 }
 
 .links h4{
     font-weight: 800;
     margin: 15px 0 15px 0;
+}
+
+.links li{
+    margin: 8px 0;
+}
+
+
+.install .stores img{
+    border: 1px solid rgba(0,0,0,0.2);
+    border-radius: 8px;
+}
+
+.copyrights{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.copyrights>img{
+    width: 50px;
+    height: 25px;
+}
+
+.copyrights p{
+    padding: 12px 4px 0px 4px;
 }
