--- a/style.css
+++ b/style.css
@@ -1081,6 +1081,53 @@ body {
     line-height: 20px;
 }
 
+/*-----------------------------  CART PAGE STYLE  -----------------------------------*/
+
+#hero-cart{
+    background-image: url('assets/img/about/banner.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    width: 100%;
+    height: 50vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+#hero-cart h2,
+#hero-cart p{
+    color: #e3e6f3;
+}
+table{
+  border-collapse: collapse;
+}
+th, td {
+  padding: 8px;
+  text-align: left;
+  border-bottom: 1px solid #ddd;
+}
+
+tr:hover{
+  background-color: #eee;
+}
+
+#cart table img{
+  width:120px;
+  height:120px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
 /*-----------------------------  MEDIA  QUERIES  -----------------------------------*/
 
 /*-----------------------------  TABLET DEVICES  -----------------------------------*/
