--- a/src/style.css
+++ b/src/style.css
@@ -1133,6 +1133,18 @@ tr:hover {
    width: 120px;
    height: 120px;
 }
+.totalFooter {
+   font-size: 20px;
+   font-weight: 800;
+}
+.escolheQuantidade {
+   display: flex;
+
+   align-items: center;
+   justify-content: center;
+   text-align: center;
+   gap: 12px;
+}
 
 /*-----------------------------  MEDIA  QUERIES  -----------------------------------*/
 
